Add user Authentication

--- a/TaskManagementSystem/appsettings.json
+++ b/TaskManagementSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "taskManagementDbEntities": "Data Source=DESKTOP-V6O030I;Initial Catalog=TaskManagementSystem;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;"
+  }
 }
